option to show grown message to reduce message spam

--- a/conf/mod_grownup.conf.dist
+++ b/conf/mod_grownup.conf.dist
@@ -29,3 +29,12 @@ GrownUp.LoginCheck = 1
 #
 
 GrownUp.Announce = 1
+
+#
+#    GrownUp.GrownAnnounce
+#        Description: Announce each level.
+#        Default:     0 - Disabled
+#                     1 - Enabled
+#
+
+GrownUp.GrownAnnounce = 0
